# inventory

./: Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml
examples/: flags.rs
impl/: Cargo.toml
impl/src/: lib.rs
src/: lib.rs
tests/: asan.rs  test.rs
tests/fixtures/asan/: Cargo.toml  main.rs
tests/ui/: collect-unsized.rs  collect-unsized.stderr  non-sync.rs  non-sync.stderr  outer-attr.rs  outer-attr.stderr  submit-nonconst.rs  submit-nonconst.stderr  submit-unrecognized.rs  submit-unrecognized.stderr  used-linker.rs  used-linker.stderr
