[package]
name = "inventory"
version = "0.3.11" # remember to update html_root_url
authors = ["David Tolnay <dtolnay@gmail.com>"]
categories = ["development-tools::build-utils", "development-tools::procedural-macro-helpers", "no-std", "no-std::no-alloc"]
description = "Typed distributed plugin registration"
documentation = "https://docs.rs/inventory"
edition = "2021"
keywords = ["linkage"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/dtolnay/inventory"
rust-version = "1.62"

[dev-dependencies]
rustversion = "1.0"
trybuild = { version = "1.0.66", features = ["diff"] }

[lib]
doc-scrape-examples = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--generate-link-to-definition"]
