[package]
name = "inventory"
version = "0.3.21"
authors = ["David Tolnay <dtolnay@gmail.com>"]
categories = ["development-tools::build-utils", "development-tools::procedural-macro-helpers", "no-std", "no-std::no-alloc"]
description = "Typed distributed plugin registration"
documentation = "https://docs.rs/inventory"
edition = "2021"
keywords = ["linkage"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/dtolnay/inventory"
rust-version = "1.62"

[target.'cfg(target_family = "wasm")'.dependencies]
rustversion = "1.0"

[dev-dependencies]
rustversion = "1.0"
trybuild = { version = "1.0.89", features = ["diff"] }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = [
    "--generate-link-to-definition",
    "--extern-html-root-url=core=https://doc.rust-lang.org",
    "--extern-html-root-url=alloc=https://doc.rust-lang.org",
    "--extern-html-root-url=std=https://doc.rust-lang.org",
]
