[package]
name = "inventory-impl"
version = "0.1.3"
authors = ["David Tolnay <dtolnay@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Implementation of macros for the `inventory` crate"
repository = "https://github.com/dtolnay/inventory"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = "1"
