[package]
name = "inventory-impl"
version = "0.1.10"
authors = ["David Tolnay <dtolnay@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Implementation of macros for the `inventory` crate"
repository = "https://github.com/dtolnay/inventory"
documentation = "https://docs.rs/inventory"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = "1.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
